Part1/1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-service
spec:
  type: ClusterIP
  selector:
    app: timestamp-app
  ports:
    - port: 3002
      targetPort: 3002
