Part1/1.10/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timestamp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: timestamp.local
      http:
        paths:
          - path: /timestamp
            pathType: Prefix
            backend:
              service:
                name: timestamp-service
                port:
                  number: 3002
